--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -186,20 +186,41 @@ other = "開発チーム"
 ['footer.links.media']
 other = "メディア"
 
-['agegate.title']
-other = "年齢を確認してください"
-
-['agegate.hint']
-other = "この先には悲嘆、静電気、あの世に関する内容があります。続行しますか?"
-
 ['agegate.btn.adult']
-other = "18歳以上です"
+other = "入る"
 
-['agegate.btn.demo']
-other = "18歳未満です（デモを続ける）"
+['agegate.accessibleTitle']
+other = "Zhovten Games のウェルカムウィンドウ"
 
-['agegate.note']
-other = "続けても失うのは時間と少しの驚きだけです。"
+['agegate.links.terms']
+other = "利用規約"
+
+['agegate.links.privacy']
+other = "プライバシーポリシー"
+
+['agegate.sectionPrimary']
+other = """
+## ようこそ
+
+ようこそ。 あなたは Zhovten Games のメタユニバースへの入口、すなわちこのプロジェクトの雰囲気へ通じるポータルに到達しました。このウィンドウを閉じた後、私たちは「役のまま」で語り続け、没入感を深めます。もし現実に戻りたくなった場合は、下記のリンクからすべての法的文書と連絡先をご覧いただけます。
+
+- [{{ .TermsTitle }}]({{ .TermsURL }})
+- [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
+- [LinkedIn で連絡]({{ .LinkedInURL }})
+
+「入る」をクリックすると、あなたが 18歳以上 であり、条件に同意したことを確認します。
+"""
+
+['agegate.sectionSecondary']
+other = """
+## 実験記録
+
+<em>時計職人のような忍耐で夜を削るモニターの冷たい光の下で、私はこれを書き留める——せめて理性が漂流しないように。私の着想は、サロンの霊媒や芝居じみた幻影からではなく、かつて死者との交信を学問の対象へと変えたメアリー・フロレスク博士の研究から生まれたのだ。あるいは映画監督ウィリアム・キャッスルにも感化されたのかもしれない。彼の発明した Illusion-O は観客に幽霊を見せ、映画館を満たした群衆を巻き込む——史上最大の集団的実験＝彼岸との交信、巧みに娯楽へと偽装された試みだった。私はいつも思う、いかに優雅に人は科学とスペクタクルを融合させ、片方をもう片方の中に隠すことができるのかと。</em>
+
+<em>それでも、あの実験ですら別のものの前では色あせる——数式が直感に道を譲り、スクリーンが応え始めたその瞬間、私がようやく目覚めさせたものの前では。</em>
+
+<em>——記録はここで途切れている。</em>
+"""
 ["footer.links.legal"]
 other = "リーガル"
 ["blog.readMore"]
