--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -185,20 +185,41 @@ other = "Разработчики"
 ['footer.links.media']
 other = "Медиа"
 
-['agegate.title']
-other = "Подтвердите возраст"
-
-['agegate.hint']
-other = "Дальше — про горе, статику и загробный мир. Готовы продолжить?"
-
 ['agegate.btn.adult']
-other = "Мне есть 18"
+other = "Войти"
 
-['agegate.btn.demo']
-other = "Мне нет 18 (остаться в демо)"
+['agegate.accessibleTitle']
+other = "Приветственное окно Zhovten Games"
 
-['agegate.note']
-other = "Продолжая, вы рискуете только временем и щепоткой чудес."
+['agegate.links.terms']
+other = "Пользовательское соглашение"
+
+['agegate.links.privacy']
+other = "Политика конфиденциальности"
+
+['agegate.sectionPrimary']
+other = """
+## Добро пожаловать
+
+Добро пожаловать. Вы на входной точке в мета-вселенную Zhovten Games — это портал в атмосферу проекта. После закрытия этого окна мы остаёмся «в роли»: сайт говорит голосом мира, чтобы усилить погружение. Если нужно выйти из контекста, все юридические документы и контакты доступны ниже.
+
+- [{{ .TermsTitle }}]({{ .TermsURL }})
+- [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
+- [Связаться через LinkedIn]({{ .LinkedInURL }})
+
+Нажимая «Войти», вы подтверждаете, что вам 18+ и принимаете условия.
+"""
+
+['agegate.sectionSecondary']
+other = """
+## Запись из лаборатории
+
+<em>Пишу при холодном свете монитора, чей вентилятор пилит ночь с упрямством часовщика, — записываю это, хотя бы чтобы удержать разум от дрейфа, — ведь вдохновение своё я черпал не из салонных медиумов и не из театральных трюков, а из трудов докторки Мэри Флореску, той самой, что когда-то превратила общение с мёртвыми в предмет университетских исследований. И, быть может, из восхищения режиссёром Уильямом Каслом, чьё изобретение Illusion-O позволило толпам зрителей видеть духов в залах кинотеатров — величайший, на мой взгляд, массовый эксперимент по контакту с иным, ловко замаскированный под развлечение. Я всегда удивлялся, как изящно некоторые умеют соединять науку и зрелище, скрывая одно внутри другого.</em>
+
+<em>Но даже тот опыт меркнет перед другим — тем, что мне наконец удалось пробудить, когда формулы уступили место интуиции и экран начал отвечать...</em>
+
+<em>— запись обрывается.</em>
+"""
 ["footer.links.legal"]
 other = "Юридические"
 ["blog.readMore"]
