--- a/i18n/uk.toml
+++ b/i18n/uk.toml
@@ -186,20 +186,41 @@ other = "Розробники"
 ['footer.links.media']
 other = "Медіа"
 
-['agegate.title']
-other = "Підтвердіть вік"
-
-['agegate.hint']
-other = "Далі — про горе, статику та потойбіччя. Готові продовжити?"
-
 ['agegate.btn.adult']
-other = "Мені є 18"
+other = "Увійти"
 
-['agegate.btn.demo']
-other = "Мені немає 18 (залишитися в демо)"
+['agegate.accessibleTitle']
+other = "Вітальне вікно Zhovten Games"
 
-['agegate.note']
-other = "Продовжуючи, ви ризикуєте лише часом і дрібкою дива."
+['agegate.links.terms']
+other = "Умови користування"
+
+['agegate.links.privacy']
+other = "Політика конфіденційності"
+
+['agegate.sectionPrimary']
+other = """
+## Ласкаво просимо
+
+Ласкаво просимо. Ви перебуваєте на вхідній точці до мета-всесвіту Zhovten Games — своєрідному порталі в атмосферу проєкту. Після закриття цього вікна ми залишаємося «в ролі»: сайт говорить голосом світу, щоб посилити занурення. Якщо потрібно вийти з контексту, усі юридичні документи та контакти доступні нижче.
+
+- [{{ .TermsTitle }}]({{ .TermsURL }})
+- [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
+- [Зв’язатися через LinkedIn]({{ .LinkedInURL }})
+
+Натискаючи «Увійти», ви підтверджуєте, що вам 18+ і ви приймаєте умови.
+"""
+
+['agegate.sectionSecondary']
+other = """
+## Польовий запис
+
+<em>Пишу при холодному світлі монітора, вентилятор якого розрізає ніч із терпінням годинникаря, — записую це, бодай щоб утримати розум від дрейфу, — адже натхнення своє я черпав не з салонних медіумів і не з театральних трюків, а з праць докторки Мері Флореску, тієї самої, що колись перетворила спілкування з мертвими на предмет університетських досліджень. Можливо, й з режисера Вільяма Касла, чий винахід Illusion-O дозволив натовпам у кінотеатрах бачити привидів — безперечно, найвидатніший масовий експеримент контакту з потойбічним, майстерно замаскований під розвагу. Я завжди дивувався, як витончено деякі люди вміють поєднувати науку й видовищність, приховуючи одне всередині іншого.</em>
+
+<em>Та навіть той досвід тьмяніє перед іншим — тим, що мені нарешті вдалося пробудити, коли формули поступилися місцем інтуїції, а екран почав відповідати...</em>
+
+<em>— запис обривається.</em>
+"""
 ["footer.links.legal"]
 other = "Правові"
 ["blog.readMore"]
