--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -161,7 +161,7 @@ other = "共に倒れた霊媒たちを数えましょう。"
 other = "共に倒れた霊媒たちを数えましょう。累計：+{{ .Count }}。"
 
 ['inevitable.title']
-other = "Истории 起こるべくして起きた結果"
+other = "物語 起こるべくして起きた結果"
 
 ['inevitable.item1']
 other = "「祖父がブーツに鍵を隠していたと知った。1分で見つかった」— マリーナ"
