--- a/i18n/uk.toml
+++ b/i18n/uk.toml
@@ -161,7 +161,7 @@ other = "Рахуйте полеглих медіумів разом із нам
 other = "Рахуйте полеглих медіумів разом із нами. Лічильник: +{{ .Count }}."
 
 ['inevitable.title']
-other = "Истории, яким судилося статися"
+other = "Історії, яким судилося статися"
 
 ['inevitable.item1']
 other = "«Дізналася, що дід ховає ключі в чоботі. Знайшли за хвилину». — Марина"
