--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -334,7 +334,15 @@ other = "プライバシーポリシー"
 other = """
 ## ようこそ
 
-ようこそ。 あなたは Zhovten Games のメタユニバースへの入口、すなわちこのプロジェクトの雰囲気へ通じるポータルに到達しました。このウィンドウを閉じた後、私たちは「役のまま」で語り続け、没入感を深めます。もし現実に戻りたくなった場合は、下記のリンクからすべての法的文書と連絡先をご覧いただけます。
+InterDead（インターデッド）は、Zhovten Games スタジオによる心理志向ホラー・プロジェクトであり、Bホラーの美学で描かれる「死者のためのメッセンジャー」をめぐる物語です。そのメッセンジャーを中心としてメタユニバースが広がっており、このサイトはその入口となります。
+
+この画面より先に表示されるテキストはすべて、「キャラクターとしての声」で書かれています――メッセンジャーの創作者である、社会的に不器用な研究者の視点からです。彼は自分のツールを売り込む際に「マーケティングの鉄則」を守ろうと必死に試みますが、その結果として常に意図的なクリンジを生み出してしまいます。
+
+世界とゲームのアイデアがどのように生まれたのかについては、連作「消えない記憶のエコー」の[第1章](/about/)で詳しく語っています。これは本プロジェクトにおける拡張版の“About”であり、メタな開発日誌でもあります。
+
+ユニバースの構造や用語、テクノロアの詳細については、[Fandom 上の InterDead Wiki](https://interdead.fandom.com/ja/wiki/InterDead_Wiki) をご覧ください。
+
+フィクションの外側に出る必要がある場合は、ページ下部にある法的文書および連絡先情報を参照してください。
 
 - [{{ .TermsTitle }}]({{ .TermsURL }})
 - [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
@@ -345,14 +353,47 @@ other = """
 
 ['agegate.sectionSecondary']
 other = """
-## 実験記録
+## 最新の記録
 
-<em>時計職人のような忍耐で夜を削るモニターの冷たい光の下で、私はこれを書き留める——せめて理性が漂流しないように。私の着想は、サロンの霊媒や芝居じみた幻影からではなく、かつて死者との交信を学問の対象へと変えたメアリー・フロレスク博士の研究から生まれたのだ。あるいは映画監督ウィリアム・キャッスルにも感化されたのかもしれない。彼の発明した Illusion-O は観客に幽霊を見せ、映画館を満たした群衆を巻き込む——史上最大の集団的実験＝彼岸との交信、巧みに娯楽へと偽装された試みだった。私はいつも思う、いかに優雅に人は科学とスペクタクルを融合させ、片方をもう片方の中に隠すことができるのかと。</em>
-
-<em>それでも、あの実験ですら別のものの前では色あせる——数式が直感に道を譲り、スクリーンが応え始めたその瞬間、私がようやく目覚めさせたものの前では。</em>
-
-<em>——記録はここで途切れている。</em>
+最新の更新をチェックしてください――ブログの新着記事は新しいタブで開きます。
 """
+
+['agegate.informer.eyebrow']
+other = "ブログインフォマー"
+
+['agegate.informer.title']
+other = "最新のブログ記事"
+
+['agegate.informer.subtitle']
+other = "InterDeadログの最新エントリー。"
+
+['agegate.informer.cta']
+other = "記事を開く"
+
+['promo.fandom.eyebrow']
+other = "コミュニティ"
+
+['promo.fandom.title']
+other = "Fandom で InterDead を探検する"
+
+['promo.fandom.text']
+other = "世界の構造、用語、テクノロアをチェック。"
+
+['promo.fandom.cta']
+other = "Fandom を開く"
+
+['promo.github.eyebrow']
+other = "開発"
+
+['promo.github.title']
+other = "GitHub でフォローする"
+
+['promo.github.text']
+other = "Zhovten Games のリポジトリ、リリース、コントリビューションを追跡。"
+
+['promo.github.cta']
+other = "GitHub へ"
+
 ["footer.links.legal"]
 other = "リーガル"
 ["blog.readMore"]
