--- a/i18n/uk.toml
+++ b/i18n/uk.toml
@@ -334,7 +334,15 @@ other = "Політика конфіденційності"
 other = """
 ## Ласкаво просимо
 
-Ласкаво просимо. Ви перебуваєте на вхідній точці до мета-всесвіту Zhovten Games — своєрідному порталі в атмосферу проєкту. Після закриття цього вікна ми залишаємося «в ролі»: сайт говорить голосом світу, щоб посилити занурення. Якщо потрібно вийти з контексту, усі юридичні документи та контакти доступні нижче.
+InterDead — психологічно орієнтований горор-проєкт студії Zhovten Games в естетиці B-horror: історія про месенджер для мертвих, довкола якого розростається мета-всесвіт. Цей сайт — вхідна точка до нього.
+
+Усе, що ви побачите після цього екрана, написано «в образі» — від імені творця месенджера, соціально незграбного дослідника, який щиро намагається дотримуватися «правил маркетингу», продаючи свій інструмент, і незмінно породжує керований крінж.
+
+Про те, як народилася ідея світу та гри, ми детально розповідаємо в [першому розділі циклу «Ехо незгасної пам’яті»](/about/) — це наш розгорнутий about і мета-щоденник розробки.
+
+Докладніше про структуру всесвіту, терміни й техно-лор читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/wiki/InterDead_Wiki).
+
+Якщо вам потрібно вийти з вимислу, юридичні документи та контакти розміщені нижче.
 
 - [{{ .TermsTitle }}]({{ .TermsURL }})
 - [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
@@ -345,14 +353,47 @@ other = """
 
 ['agegate.sectionSecondary']
 other = """
-## Польовий запис
+## Останній запис
 
-<em>Пишу при холодному світлі монітора, вентилятор якого розрізає ніч із терпінням годинникаря, — записую це, бодай щоб утримати розум від дрейфу, — адже натхнення своє я черпав не з салонних медіумів і не з театральних трюків, а з праць докторки Мері Флореску, тієї самої, що колись перетворила спілкування з мертвими на предмет університетських досліджень. Можливо, й з режисера Вільяма Касла, чий винахід Illusion-O дозволив натовпам у кінотеатрах бачити привидів — безперечно, найвидатніший масовий експеримент контакту з потойбічним, майстерно замаскований під розвагу. Я завжди дивувався, як витончено деякі люди вміють поєднувати науку й видовищність, приховуючи одне всередині іншого.</em>
-
-<em>Та навіть той досвід тьмяніє перед іншим — тим, що мені нарешті вдалося пробудити, коли формули поступилися місцем інтуїції, а екран почав відповідати...</em>
-
-<em>— запис обривається.</em>
+Слідкуйте за оновленнями — свіжий запис блогу відкриється у новій вкладці.
 """
+
+['agegate.informer.eyebrow']
+other = "Інформер блогу"
+
+['agegate.informer.title']
+other = "Свіжа публікація блогу"
+
+['agegate.informer.subtitle']
+other = "Нова позначка в журналі InterDead."
+
+['agegate.informer.cta']
+other = "Відкрити публікацію"
+
+['promo.fandom.eyebrow']
+other = "Спільнота"
+
+['promo.fandom.title']
+other = "Досліджуйте InterDead на Fandom"
+
+['promo.fandom.text']
+other = "Читайте про структуру всесвіту, терміни й техно-лор."
+
+['promo.fandom.cta']
+other = "Відкрити Fandom"
+
+['promo.github.eyebrow']
+other = "Розробка"
+
+['promo.github.title']
+other = "Слідкуйте за нами на GitHub"
+
+['promo.github.text']
+other = "Відстежуйте репозиторії, релізи та внесок Zhovten Games."
+
+['promo.github.cta']
+other = "Перейти на GitHub"
+
 ["footer.links.legal"]
 other = "Правові"
 ["blog.readMore"]
