--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -333,7 +333,15 @@ other = "Политика конфиденциальности"
 other = """
 ## Добро пожаловать
 
-Добро пожаловать. Вы на входной точке в мета-вселенную Zhovten Games — это портал в атмосферу проекта. После закрытия этого окна мы остаёмся «в роли»: сайт говорит голосом мира, чтобы усилить погружение. Если нужно выйти из контекста, все юридические документы и контакты доступны ниже.
+InterDead — психологически ориентированный хоррор-проект студии Zhovten Games в эстетике B-horror: история о мессенджере для мёртвых, вокруг которого разрастается мета-вселенная. Этот сайт — входная точка в неё.
+
+Всё, что вы увидите после этого экрана, написано «в образе» — от лица создателя мессенджера, социально неловкого исследователя, который искренне пытается соблюдать «правила маркетинга», продавая свой инструмент, и неизменно порождает контролируемый кринж.
+
+О том, как родилась идея мира и игры, мы подробно рассказываем в [первой главе цикла «Эхо неугасаемой памяти»](/about/) — это наш развёрнутый about и мета-дневник разработки.
+
+Подробнее о структуре вселенной, терминах и техно-лоре читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/ru/wiki/%D0%92%D1%81%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_InterDead).
+
+Если вам нужно выйти из вымысла, юридические документы и контакты находятся ниже.
 
 - [{{ .TermsTitle }}]({{ .TermsURL }})
 - [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
@@ -344,14 +352,47 @@ other = """
 
 ['agegate.sectionSecondary']
 other = """
-## Запись из лаборатории
+## Последняя запись
 
-<em>Пишу при холодном свете монитора, чей вентилятор пилит ночь с упрямством часовщика, — записываю это, хотя бы чтобы удержать разум от дрейфа, — ведь вдохновение своё я черпал не из салонных медиумов и не из театральных трюков, а из трудов докторки Мэри Флореску, той самой, что когда-то превратила общение с мёртвыми в предмет университетских исследований. И, быть может, из восхищения режиссёром Уильямом Каслом, чьё изобретение Illusion-O позволило толпам зрителей видеть духов в залах кинотеатров — величайший, на мой взгляд, массовый эксперимент по контакту с иным, ловко замаскированный под развлечение. Я всегда удивлялся, как изящно некоторые умеют соединять науку и зрелище, скрывая одно внутри другого.</em>
-
-<em>Но даже тот опыт меркнет перед другим — тем, что мне наконец удалось пробудить, когда формулы уступили место интуиции и экран начал отвечать...</em>
-
-<em>— запись обрывается.</em>
+Следите за обновлениями — свежий пост блога откроется в новой вкладке.
 """
+
+['agegate.informer.eyebrow']
+other = "Информер блога"
+
+['agegate.informer.title']
+other = "Свежая запись блога"
+
+['agegate.informer.subtitle']
+other = "Новая отметка в журнале InterDead."
+
+['agegate.informer.cta']
+other = "Открыть запись"
+
+['promo.fandom.eyebrow']
+other = "Сообщество"
+
+['promo.fandom.title']
+other = "Исследуйте InterDead на Fandom"
+
+['promo.fandom.text']
+other = "Читайте о структуре вселенной, терминологии и техно-лоре."
+
+['promo.fandom.cta']
+other = "Открыть Fandom"
+
+['promo.github.eyebrow']
+other = "Разработка"
+
+['promo.github.title']
+other = "Следите за нами на GitHub"
+
+['promo.github.text']
+other = "Отслеживайте репозитории, релизы и вклад Zhovten Games."
+
+['promo.github.cta']
+other = "Перейти на GitHub"
+
 ["footer.links.legal"]
 other = "Юридические"
 ["blog.readMore"]
